fix video styles. better align play button

--- a/app/assets/stylesheets/blocks/b-video.sass
+++ b/app/assets/stylesheets/blocks/b-video.sass
@@ -9,6 +9,7 @@
 
 .b-video
   +image_editable
+  +media
 
   &.fixed
     .video-link img
@@ -28,8 +29,8 @@
       margin-bottom: -9.35%
 
   .video-link
-    +media
     background: #212121
+    display: inline-block
 
     &:hover:before
       opacity: 1
@@ -43,8 +44,8 @@
       height: 54px
       left: 50%
       line-height: 54px
-      margin-left: -29px
-      margin-top: -29px
+      margin-left: -27px
+      margin-top: -27px
       opacity: 0
       position: absolute
       text-align: center
